# AndroidOpenCVCamera

./: .gitignore  README.md  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/net/jonreynolds/androidopencvcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.hpp  native-lib.cpp
app/src/main/java/net/jonreynolds/androidopencvcamera/: CameraActivity.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity.xml
app/src/main/res/values/: base-strings.xml
app/src/test/java/net/jonreynolds/androidopencvcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
